--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,12 @@
 .colorfondo{
     background-color: #21D4FD;
 background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
-
-
 }
 
 .avatar{
     width: 120px;
+}
+
+html{
+    scroll-behavior: smooth;
 }
