--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 .colorfondo{
-    background-color: #21D4FD;
-background-image: linear-gradient(19deg, #21D4FD 0%, #B721FF 100%);
+    /* background-color: #21D4FD; */
+background-image: linear-gradient(19deg, #BB3131 0%, #6A2222 100%);
 }
 
 .avatar{
